<resources>
    <string name="app_name">MinigamesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_fragmento_ahorcado"> AHORCADO</string>
    <string name="intentos_ahorcado"> Intentos restantes:</string>
    <string name="letras_ahorcado"> Letras:</string>
    <string name="introducir_letra_ahorcado">Introduzca una letra</string>
    <string name="jugar_boton_ahorcado">Jugar</string>
    <string name="boton_reinicio">Jugar Otra Vez</string>
    <string name="Inicio">¡Bienvenidos!</string>
</resources>